RESOLVED FIXED182677
Ignore order when parsing inset and color for box-shadow
https://bugs.webkit.org/show_bug.cgi?id=182677
Summary Ignore order when parsing inset and color for box-shadow
Chris Nardi
Reported 2018-02-11 14:42:38 PST
Ignore order when parsing inset and color for box-shadow
Attachments
Patch (2.26 KB, patch)
2018-02-11 14:44 PST, Chris Nardi
no flags
Patch (10.09 KB, patch)
2020-11-01 22:01 PST, Tyler Wilcock
no flags
Patch (15.73 KB, patch)
2020-11-02 10:11 PST, Tyler Wilcock
no flags
Chris Nardi
Comment 1 2018-02-11 14:44:21 PST
Chris Nardi
Comment 2 2018-02-11 16:29:55 PST
Looks like this is only a part of the bug; it appears WebKit has some other issue with the inset keyword (see https://w3c-test.org/css/css-backgrounds/box-shadow-syntax-001.xht).
Chris Nardi
Comment 3 2018-02-11 16:30:18 PST
(this probably isn't ready for review yet as such as the test case still fails)
Tyler Wilcock
Comment 4 2020-11-01 22:01:18 PST
Simon Fraser (smfr)
Comment 5 2020-11-02 08:12:12 PST
Comment on attachment 412882 [details] Patch I'd like to see some more testing of the invalid cases (e.g. two colors or styles per shadow etc).
Tyler Wilcock
Comment 6 2020-11-02 10:11:12 PST
Tyler Wilcock
Comment 7 2020-11-02 11:18:57 PST
OK Simon, I added tests for these invalid cases. Added r? and cq?.
EWS
Comment 8 2020-11-03 20:59:07 PST
Committed r269354: <https://trac.webkit.org/changeset/269354> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412938 [details].
Radar WebKit Bug Importer
Comment 9 2020-11-03 21:00:27 PST
Note You need to log in before you can comment on or make changes to this bug.